# path-fm

./: .gitignore  AGENTS.md  README.md  README_COLLAPSE_PROOF.md  _utils.py  baddata.txt  build_lit_tcga.py  build_lit_tcga_revised.py  convert_tcga_to_zarr.py  dataset_stats.py  debug_augmentations.ipynb  eva_evaluation.py  evaluate_all_checkpoints.sh  flatty.sh  install.sh  launch.sh  litdata_convert.sh  main.py  manifest.txt  manifest_creator.sh  manifest_large.txt  pyproject.toml  requirements.txt  requirements_fixed.txt  run.sh  run_1node.sh  run_ablation.sh  run_master_node.sh  run_other_nodes.sh  run_short_1gpu.sh  run_vitg.sh  svs_to_zarr_r2.py  test_collapse_proof.py  test_litdata_stream.py  test_samples.py
dinov2/: eval_config.yaml  eval_dinov3.yaml
dinov2/configs/: ssl_default_config.yaml
dinov2/configs/train/: pathology.yaml  short_test_collapse.yaml  short_test_config.yaml  vitg14_reg4.yaml  vitg14_reg4_ablations.yaml  vitg14_reg4_short.yaml  vitg14_reg4_short1.yaml  vitg14_reg4_short2.yaml  vitl14.yaml  vitl16_h100_30ep.yaml  vitl16_short_reg.yaml  vitl16_short_reg_dinoibot.yaml  vits14_reg4.yaml  vits14_reg_ablations.yaml
dinov2/cplearn/: README.md
dinov2/data/: augmentations.py  augmentations_ablation.py  loaders.py  transforms.py
dinov2/data/datasets/: __init__.py  slide_dataset.py  slide_dataset_old.py  slide_dataset_zarr.py  test_data.py
dinov2/distributed/: __init__.py
dinov2/fsdp/: __init__.py
dinov2/layers/: __init__.py  collapse_projector.py  collapse_proof.py
dinov2/logging/: helpers.py
dinov2/loss/: __init__.py  collapse_proof.py  collapse_proof_loss.py  cplearn.py  kde_loss.py
dinov2/run/: submit.py
dinov2/train/: ssl_meta_arch.py  train.py
dinov2/utils/: param_groups.py
docs/: README_CollapseProof.md  collapse_proof_integration.md
eval_configs/: bach.yaml  bach_hed.yaml  bracs.yaml  breakhist.yaml  breakhist_hed.yaml  cam16_small.yaml  consep.yaml  crc.yaml  crc_hed.yaml  gleason_offline.yaml  mhist.yaml  monusac.yaml  monusac_hed.yaml  panda_small.yaml  pcam_10.yaml
prepatching_scripts/: build_lit_sample_dataset.py  create_sample_dataset_txt.py
scripts/: convert_tcga_to_zarr_subset.py
