[build-system]
requires = ["setuptools>=69", "wheel"]

[project]
name = "pathologydino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "torch==2.8.0",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "einops>=0.8.1",
    "fvcore>=0.1.5.post20221221",
    "iopath>=0.1.10",
    "matplotlib>=3.10.5",
    "omegaconf>=2.3.0",
    "opencv-python>=4.12.0.88",
    "openslide-bin>=4.0.0.8",
    "openslide-python>=1.4.2",
    "scikit-image>=0.25.2",
    "submitit>=1.5.3",
    "torchmetrics>=1.8.0",
    "wandb>=0.21.0",
    "kaiko-eva[vision]>=0.3.3",
    "xformers==0.0.32.post1",
    "s3fs",
    "zarr",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
xformers = { index = "pytorch-cu128" }

[tool.setuptools.packages.find]
include = ["dinov2*"]